school-system/src/main/java/com/example/school/system/error/NonExistingSchool.java
package com.example.school.system.error;

public class NonExistingSchool extends RuntimeException {
    public NonExistingSchool(String message) {
        super(message);
    }

}
